src/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.5 from src/Parser.y
-----------------------------------------------------------------------------

state 105 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> Program                            (0)
	Program -> DeclList                                (1)
	DeclList -> Decl                                   (2)
	DeclList -> Decl ";" DeclList                      (3)
	Decl -> ident Params "=" Expr                      (4)
	Params ->                                          (5)
	Params -> ident Params                             (6)
	Expr -> Lambda                                     (7)
	Expr -> IfExpr                                     (8)
	Expr -> CaseExpr                                   (9)
	Expr -> LetExpr                                    (10)
	Expr -> ExprOr                                     (11)
	Lambda -> "\\" LamParams "->" Expr                 (12)
	LamParams -> Params                                (13)
	LamParams -> "(" IdentList ")"                     (14)
	IdentList -> ident                                 (15)
	IdentList -> ident "," IdentList                   (16)
	IfExpr -> "if" Expr "then" Expr "else" Expr        (17)
	CaseExpr -> "case" Expr "of" Alts                  (18)
	Alts -> Alt                                        (19)
	Alts -> Alt ";" Alts                               (20)
	Alt -> Pattern "->" Expr                           (21)
	LetExpr -> "let" DeclList "in" Expr                (22)
	ExprOr -> ExprAnd OrRest                           (23)
	OrRest ->                                          (24)
	OrRest -> "||" ExprAnd OrRest                      (25)
	ExprAnd -> ExprEq AndRest                          (26)
	AndRest ->                                         (27)
	AndRest -> "&&" ExprEq AndRest                     (28)
	ExprEq -> ExprRel EqRest                           (29)
	EqRest ->                                          (30)
	EqRest -> EqOp ExprRel EqRest                      (31)
	EqOp -> "=="                                       (32)
	EqOp -> "/="                                       (33)
	ExprRel -> ExprAdd RelRest                         (34)
	RelRest ->                                         (35)
	RelRest -> RelOp ExprAdd RelRest                   (36)
	RelOp -> "<"                                       (37)
	RelOp -> "<="                                      (38)
	RelOp -> ">"                                       (39)
	RelOp -> ">="                                      (40)
	ExprAdd -> ExprMul AddRest                         (41)
	AddRest ->                                         (42)
	AddRest -> AddOp ExprMul AddRest                   (43)
	AddOp -> "+"                                       (44)
	AddOp -> "-"                                       (45)
	ExprMul -> ExprUnary MulRest                       (46)
	MulRest ->                                         (47)
	MulRest -> MulOp ExprUnary MulRest                 (48)
	MulOp -> "*"                                       (49)
	MulOp -> "/"                                       (50)
	MulOp -> "%"                                       (51)
	ExprUnary -> "not" ExprUnary                       (52)
	ExprUnary -> "-" ExprUnary                         (53)
	ExprUnary -> ExprApp                               (54)
	ExprApp -> Atom AppTail                            (55)
	AppTail ->                                         (56)
	AppTail -> Atom AppTail                            (57)
	Atom -> Literal                                    (58)
	Atom -> ident                                      (59)
	Atom -> "(" Expr ")"                               (60)
	Atom -> List                                       (61)
	Atom -> Tuple                                      (62)
	Literal -> int                                     (63)
	Literal -> float                                   (64)
	Literal -> char                                    (65)
	Literal -> string                                  (66)
	Literal -> "True"                                  (67)
	Literal -> "False"                                 (68)
	List -> "[" ExprListOpt "]"                        (69)
	ExprListOpt ->                                     (70)
	ExprListOpt -> ExprList                            (71)
	ExprList -> Expr ExprListTail                      (72)
	ExprListTail ->                                    (73)
	ExprListTail -> "," Expr ExprListTail              (74)
	Tuple -> "(" Expr "," Expr TupleTail ")"           (75)
	TupleTail ->                                       (76)
	TupleTail -> "," Expr TupleTail                    (77)
	Pattern -> "_"                                     (78)
	Pattern -> ident                                   (79)
	Pattern -> Literal                                 (80)
	Pattern -> ListPattern                             (81)
	Pattern -> TuplePattern                            (82)
	ListPattern -> "[" PatternListOpt "]"              (83)
	PatternListOpt ->                                  (84)
	PatternListOpt -> PatternList                      (85)
	PatternList -> Pattern PatternListTail             (86)
	PatternListTail ->                                 (87)
	PatternListTail -> "," Pattern PatternListTail     (88)
	TuplePattern -> "(" Pattern PatternTupleTail ")"   (89)
	PatternTupleTail ->                                (90)
	PatternTupleTail -> "," Pattern PatternTupleTail   (91)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	";"            { (_, TokenSemi) }
	"let"          { (_, TokenLet) }
	"in"           { (_, TokenIn) }
	"if"           { (_, TokenIf) }
	"then"         { (_, TokenThen) }
	"else"         { (_, TokenElse) }
	"case"         { (_, TokenCase) }
	"of"           { (_, TokenOf) }
	"not"          { (_, TokenNot) }
	"->"           { (_, TokenArrow) }
	"\\"           { (_, TokenBackslash) }
	"="            { (_, TokenEquals) }
	"_"            { (_, TokenUnderscore) }
	"("            { (_, TokenLParen) }
	")"            { (_, TokenRParen) }
	"["            { (_, TokenLBracket) }
	"]"            { (_, TokenRBracket) }
	","            { (_, TokenComma) }
	"+"            { (_, TokenPlus) }
	"-"            { (_, TokenMinus) }
	"*"            { (_, TokenTimes) }
	"/"            { (_, TokenDiv) }
	"%"            { (_, TokenMod) }
	"=="           { (_, TokenEq) }
	"/="           { (_, TokenNeq) }
	"<"            { (_, TokenLt) }
	"<="           { (_, TokenLe) }
	">"            { (_, TokenGt) }
	">="           { (_, TokenGe) }
	"&&"           { (_, TokenAnd) }
	"||"           { (_, TokenOr) }
	int            { (_, TokenInt $$) }
	float          { (_, TokenFloat $$) }
	char           { (_, TokenChar $$) }
	string         { (_, TokenString $$) }
	"True"         { (_, TokenBool True) }
	"False"        { (_, TokenBool False) }
	ident          { (_, TokenIdent $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	Program         rule  1
	DeclList        rules 2, 3
	Decl            rule  4
	Params          rules 5, 6
	Expr            rules 7, 8, 9, 10, 11
	Lambda          rule  12
	LamParams       rules 13, 14
	IdentList       rules 15, 16
	IfExpr          rule  17
	CaseExpr        rule  18
	Alts            rules 19, 20
	Alt             rule  21
	LetExpr         rule  22
	ExprOr          rule  23
	OrRest          rules 24, 25
	ExprAnd         rule  26
	AndRest         rules 27, 28
	ExprEq          rule  29
	EqRest          rules 30, 31
	EqOp            rules 32, 33
	ExprRel         rule  34
	RelRest         rules 35, 36
	RelOp           rules 37, 38, 39, 40
	ExprAdd         rule  41
	AddRest         rules 42, 43
	AddOp           rules 44, 45
	ExprMul         rule  46
	MulRest         rules 47, 48
	MulOp           rules 49, 50, 51
	ExprUnary       rules 52, 53, 54
	ExprApp         rule  55
	AppTail         rules 56, 57
	Atom            rules 58, 59, 60, 61, 62
	Literal         rules 63, 64, 65, 66, 67, 68
	List            rule  69
	ExprListOpt     rules 70, 71
	ExprList        rule  72
	ExprListTail    rules 73, 74
	Tuple           rule  75
	TupleTail       rules 76, 77
	Pattern         rules 78, 79, 80, 81, 82
	ListPattern     rule  83
	PatternListOpt  rules 84, 85
	PatternList     rule  86
	PatternListTail rules 87, 88
	TuplePattern    rule  89
	PatternTupleTail rules 90, 91

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . Program                           (rule 0)

	ident          shift, and enter state 4

	Program        goto state 5
	DeclList       goto state 2
	Decl           goto state 3

State 1

	Program -> . DeclList                               (rule 1)

	ident          shift, and enter state 4

	DeclList       goto state 2
	Decl           goto state 3

State 2

	Program -> DeclList .                               (rule 1)

	%eof           reduce using rule 1


State 3

	DeclList -> Decl .                                  (rule 2)
	DeclList -> Decl . ";" DeclList                     (rule 3)

	";"            shift, and enter state 8
	"in"           reduce using rule 2
	%eof           reduce using rule 2


State 4

	Decl -> ident . Params "=" Expr                     (rule 4)

	"="            reduce using rule 5
	ident          shift, and enter state 7

	Params         goto state 6

State 5

	%start_parse -> Program .                           (rule 0)

	%eof           accept


State 6

	Decl -> ident Params . "=" Expr                     (rule 4)

	"="            shift, and enter state 11


State 7

	Params -> ident . Params                            (rule 6)

	"->"           reduce using rule 5
	"="            reduce using rule 5
	ident          shift, and enter state 7

	Params         goto state 10

State 8

	DeclList -> Decl ";" . DeclList                     (rule 3)

	ident          shift, and enter state 4

	DeclList       goto state 9
	Decl           goto state 3

State 9

	DeclList -> Decl ";" DeclList .                     (rule 3)

	"in"           reduce using rule 3
	%eof           reduce using rule 3


State 10

	Params -> ident Params .                            (rule 6)

	"->"           reduce using rule 6
	"="            reduce using rule 6


State 11

	Decl -> ident Params "=" . Expr                     (rule 4)

	"let"          shift, and enter state 29
	"if"           shift, and enter state 30
	"case"         shift, and enter state 31
	"not"          shift, and enter state 32
	"\\"           shift, and enter state 33
	"("            shift, and enter state 34
	"["            shift, and enter state 35
	"-"            shift, and enter state 36
	int            shift, and enter state 37
	float          shift, and enter state 38
	char           shift, and enter state 39
	string         shift, and enter state 40
	"True"         shift, and enter state 41
	"False"        shift, and enter state 42
	ident          shift, and enter state 43

	Expr           goto state 12
	Lambda         goto state 13
	IfExpr         goto state 14
	CaseExpr       goto state 15
	LetExpr        goto state 16
	ExprOr         goto state 17
	ExprAnd        goto state 18
	ExprEq         goto state 19
	ExprRel        goto state 20
	ExprAdd        goto state 21
	ExprMul        goto state 22
	ExprUnary      goto state 23
	ExprApp        goto state 24
	Atom           goto state 25
	Literal        goto state 26
	List           goto state 27
	Tuple          goto state 28

State 12

	Decl -> ident Params "=" Expr .                     (rule 4)

	";"            reduce using rule 4
	"in"           reduce using rule 4
	%eof           reduce using rule 4


State 13

	Expr -> Lambda .                                    (rule 7)

	";"            reduce using rule 7
	"in"           reduce using rule 7
	"then"         reduce using rule 7
	"else"         reduce using rule 7
	"of"           reduce using rule 7
	")"            reduce using rule 7
	"]"            reduce using rule 7
	","            reduce using rule 7
	%eof           reduce using rule 7


State 14

	Expr -> IfExpr .                                    (rule 8)

	";"            reduce using rule 8
	"in"           reduce using rule 8
	"then"         reduce using rule 8
	"else"         reduce using rule 8
	"of"           reduce using rule 8
	")"            reduce using rule 8
	"]"            reduce using rule 8
	","            reduce using rule 8
	%eof           reduce using rule 8


State 15

	Expr -> CaseExpr .                                  (rule 9)

	";"            reduce using rule 9
	"in"           reduce using rule 9
	"then"         reduce using rule 9
	"else"         reduce using rule 9
	"of"           reduce using rule 9
	")"            reduce using rule 9
	"]"            reduce using rule 9
	","            reduce using rule 9
	%eof           reduce using rule 9


State 16

	Expr -> LetExpr .                                   (rule 10)

	";"            reduce using rule 10
	"in"           reduce using rule 10
	"then"         reduce using rule 10
	"else"         reduce using rule 10
	"of"           reduce using rule 10
	")"            reduce using rule 10
	"]"            reduce using rule 10
	","            reduce using rule 10
	%eof           reduce using rule 10


State 17

	Expr -> ExprOr .                                    (rule 11)

	";"            reduce using rule 11
	"in"           reduce using rule 11
	"then"         reduce using rule 11
	"else"         reduce using rule 11
	"of"           reduce using rule 11
	")"            reduce using rule 11
	"]"            reduce using rule 11
	","            reduce using rule 11
	%eof           reduce using rule 11


State 18

	ExprOr -> ExprAnd . OrRest                          (rule 23)

	";"            reduce using rule 24
	"in"           reduce using rule 24
	"then"         reduce using rule 24
	"else"         reduce using rule 24
	"of"           reduce using rule 24
	")"            reduce using rule 24
	"]"            reduce using rule 24
	","            reduce using rule 24
	"||"           shift, and enter state 80
	%eof           reduce using rule 24

	OrRest         goto state 79

State 19

	ExprAnd -> ExprEq . AndRest                         (rule 26)

	";"            reduce using rule 27
	"in"           reduce using rule 27
	"then"         reduce using rule 27
	"else"         reduce using rule 27
	"of"           reduce using rule 27
	")"            reduce using rule 27
	"]"            reduce using rule 27
	","            reduce using rule 27
	"&&"           shift, and enter state 78
	"||"           reduce using rule 27
	%eof           reduce using rule 27

	AndRest        goto state 77

State 20

	ExprEq -> ExprRel . EqRest                          (rule 29)

	";"            reduce using rule 30
	"in"           reduce using rule 30
	"then"         reduce using rule 30
	"else"         reduce using rule 30
	"of"           reduce using rule 30
	")"            reduce using rule 30
	"]"            reduce using rule 30
	","            reduce using rule 30
	"=="           shift, and enter state 75
	"/="           shift, and enter state 76
	"&&"           reduce using rule 30
	"||"           reduce using rule 30
	%eof           reduce using rule 30

	EqRest         goto state 73
	EqOp           goto state 74

State 21

	ExprRel -> ExprAdd . RelRest                        (rule 34)

	";"            reduce using rule 35
	"in"           reduce using rule 35
	"then"         reduce using rule 35
	"else"         reduce using rule 35
	"of"           reduce using rule 35
	")"            reduce using rule 35
	"]"            reduce using rule 35
	","            reduce using rule 35
	"=="           reduce using rule 35
	"/="           reduce using rule 35
	"<"            shift, and enter state 69
	"<="           shift, and enter state 70
	">"            shift, and enter state 71
	">="           shift, and enter state 72
	"&&"           reduce using rule 35
	"||"           reduce using rule 35
	%eof           reduce using rule 35

	RelRest        goto state 67
	RelOp          goto state 68

State 22

	ExprAdd -> ExprMul . AddRest                        (rule 41)

	";"            reduce using rule 42
	"in"           reduce using rule 42
	"then"         reduce using rule 42
	"else"         reduce using rule 42
	"of"           reduce using rule 42
	")"            reduce using rule 42
	"]"            reduce using rule 42
	","            reduce using rule 42
	"+"            shift, and enter state 65
	"-"            shift, and enter state 66
	"=="           reduce using rule 42
	"/="           reduce using rule 42
	"<"            reduce using rule 42
	"<="           reduce using rule 42
	">"            reduce using rule 42
	">="           reduce using rule 42
	"&&"           reduce using rule 42
	"||"           reduce using rule 42
	%eof           reduce using rule 42

	AddRest        goto state 63
	AddOp          goto state 64

State 23

	ExprMul -> ExprUnary . MulRest                      (rule 46)

	";"            reduce using rule 47
	"in"           reduce using rule 47
	"then"         reduce using rule 47
	"else"         reduce using rule 47
	"of"           reduce using rule 47
	")"            reduce using rule 47
	"]"            reduce using rule 47
	","            reduce using rule 47
	"+"            reduce using rule 47
	"-"            reduce using rule 47
	"*"            shift, and enter state 60
	"/"            shift, and enter state 61
	"%"            shift, and enter state 62
	"=="           reduce using rule 47
	"/="           reduce using rule 47
	"<"            reduce using rule 47
	"<="           reduce using rule 47
	">"            reduce using rule 47
	">="           reduce using rule 47
	"&&"           reduce using rule 47
	"||"           reduce using rule 47
	%eof           reduce using rule 47

	MulRest        goto state 58
	MulOp          goto state 59

State 24

	ExprUnary -> ExprApp .                              (rule 54)

	";"            reduce using rule 54
	"in"           reduce using rule 54
	"then"         reduce using rule 54
	"else"         reduce using rule 54
	"of"           reduce using rule 54
	")"            reduce using rule 54
	"]"            reduce using rule 54
	","            reduce using rule 54
	"+"            reduce using rule 54
	"-"            reduce using rule 54
	"*"            reduce using rule 54
	"/"            reduce using rule 54
	"%"            reduce using rule 54
	"=="           reduce using rule 54
	"/="           reduce using rule 54
	"<"            reduce using rule 54
	"<="           reduce using rule 54
	">"            reduce using rule 54
	">="           reduce using rule 54
	"&&"           reduce using rule 54
	"||"           reduce using rule 54
	%eof           reduce using rule 54


State 25

	ExprApp -> Atom . AppTail                           (rule 55)

	";"            reduce using rule 56
	"in"           reduce using rule 56
	"then"         reduce using rule 56
	"else"         reduce using rule 56
	"of"           reduce using rule 56
	"("            shift, and enter state 34
	")"            reduce using rule 56
	"["            shift, and enter state 35
	"]"            reduce using rule 56
	","            reduce using rule 56
	"+"            reduce using rule 56
	"-"            reduce using rule 56
	"*"            reduce using rule 56
	"/"            reduce using rule 56
	"%"            reduce using rule 56
	"=="           reduce using rule 56
	"/="           reduce using rule 56
	"<"            reduce using rule 56
	"<="           reduce using rule 56
	">"            reduce using rule 56
	">="           reduce using rule 56
	"&&"           reduce using rule 56
	"||"           reduce using rule 56
	int            shift, and enter state 37
	float          shift, and enter state 38
	char           shift, and enter state 39
	string         shift, and enter state 40
	"True"         shift, and enter state 41
	"False"        shift, and enter state 42
	ident          shift, and enter state 43
	%eof           reduce using rule 56

	AppTail        goto state 56
	Atom           goto state 57
	Literal        goto state 26
	List           goto state 27
	Tuple          goto state 28

State 26

	Atom -> Literal .                                   (rule 58)

	";"            reduce using rule 58
	"in"           reduce using rule 58
	"then"         reduce using rule 58
	"else"         reduce using rule 58
	"of"           reduce using rule 58
	"("            reduce using rule 58
	")"            reduce using rule 58
	"["            reduce using rule 58
	"]"            reduce using rule 58
	","            reduce using rule 58
	"+"            reduce using rule 58
	"-"            reduce using rule 58
	"*"            reduce using rule 58
	"/"            reduce using rule 58
	"%"            reduce using rule 58
	"=="           reduce using rule 58
	"/="           reduce using rule 58
	"<"            reduce using rule 58
	"<="           reduce using rule 58
	">"            reduce using rule 58
	">="           reduce using rule 58
	"&&"           reduce using rule 58
	"||"           reduce using rule 58
	int            reduce using rule 58
	float          reduce using rule 58
	char           reduce using rule 58
	string         reduce using rule 58
	"True"         reduce using rule 58
	"False"        reduce using rule 58
	ident          reduce using rule 58
	%eof           reduce using rule 58


State 27

	Atom -> List .                                      (rule 61)

	";"            reduce using rule 61
	"in"           reduce using rule 61
	"then"         reduce using rule 61
	"else"         reduce using rule 61
	"of"           reduce using rule 61
	"("            reduce using rule 61
	")"            reduce using rule 61
	"["            reduce using rule 61
	"]"            reduce using rule 61
	","            reduce using rule 61
	"+"            reduce using rule 61
	"-"            reduce using rule 61
	"*"            reduce using rule 61
	"/"            reduce using rule 61
	"%"            reduce using rule 61
	"=="           reduce using rule 61
	"/="           reduce using rule 61
	"<"            reduce using rule 61
	"<="           reduce using rule 61
	">"            reduce using rule 61
	">="           reduce using rule 61
	"&&"           reduce using rule 61
	"||"           reduce using rule 61
	int            reduce using rule 61
	float          reduce using rule 61
	char           reduce using rule 61
	string         reduce using rule 61
	"True"         reduce using rule 61
	"False"        reduce using rule 61
	ident          reduce using rule 61
	%eof           reduce using rule 61


State 28

	Atom -> Tuple .                                     (rule 62)

	";"            reduce using rule 62
	"in"           reduce using rule 62
	"then"         reduce using rule 62
	"else"         reduce using rule 62
	"of"           reduce using rule 62
	"("            reduce using rule 62
	")"            reduce using rule 62
	"["            reduce using rule 62
	"]"            reduce using rule 62
	","            reduce using rule 62
	"+"            reduce using rule 62
	"-"            reduce using rule 62
	"*"            reduce using rule 62
	"/"            reduce using rule 62
	"%"            reduce using rule 62
	"=="           reduce using rule 62
	"/="           reduce using rule 62
	"<"            reduce using rule 62
	"<="           reduce using rule 62
	">"            reduce using rule 62
	">="           reduce using rule 62
	"&&"           reduce using rule 62
	"||"           reduce using rule 62
	int            reduce using rule 62
	float          reduce using rule 62
	char           reduce using rule 62
	string         reduce using rule 62
	"True"         reduce using rule 62
	"False"        reduce using rule 62
	ident          reduce using rule 62
	%eof           reduce using rule 62


State 29

	LetExpr -> "let" . DeclList "in" Expr               (rule 22)

	ident          shift, and enter state 4

	DeclList       goto state 55
	Decl           goto state 3

State 30

	IfExpr -> "if" . Expr "then" Expr "else" Expr       (rule 17)

	"let"          shift, and enter state 29
	"if"           shift, and enter state 30
	"case"         shift, and enter state 31
	"not"          shift, and enter state 32
	"\\"           shift, and enter state 33
	"("            shift, and enter state 34
	"["            shift, and enter state 35
	"-"            shift, and enter state 36
	int            shift, and enter state 37
	float          shift, and enter state 38
	char           shift, and enter state 39
	string         shift, and enter state 40
	"True"         shift, and enter state 41
	"False"        shift, and enter state 42
	ident          shift, and enter state 43

	Expr           goto state 54
	Lambda         goto state 13
	IfExpr         goto state 14
	CaseExpr       goto state 15
	LetExpr        goto state 16
	ExprOr         goto state 17
	ExprAnd        goto state 18
	ExprEq         goto state 19
	ExprRel        goto state 20
	ExprAdd        goto state 21
	ExprMul        goto state 22
	ExprUnary      goto state 23
	ExprApp        goto state 24
	Atom           goto state 25
	Literal        goto state 26
	List           goto state 27
	Tuple          goto state 28

State 31

	CaseExpr -> "case" . Expr "of" Alts                 (rule 18)

	"let"          shift, and enter state 29
	"if"           shift, and enter state 30
	"case"         shift, and enter state 31
	"not"          shift, and enter state 32
	"\\"           shift, and enter state 33
	"("            shift, and enter state 34
	"["            shift, and enter state 35
	"-"            shift, and enter state 36
	int            shift, and enter state 37
	float          shift, and enter state 38
	char           shift, and enter state 39
	string         shift, and enter state 40
	"True"         shift, and enter state 41
	"False"        shift, and enter state 42
	ident          shift, and enter state 43

	Expr           goto state 53
	Lambda         goto state 13
	IfExpr         goto state 14
	CaseExpr       goto state 15
	LetExpr        goto state 16
	ExprOr         goto state 17
	ExprAnd        goto state 18
	ExprEq         goto state 19
	ExprRel        goto state 20
	ExprAdd        goto state 21
	ExprMul        goto state 22
	ExprUnary      goto state 23
	ExprApp        goto state 24
	Atom           goto state 25
	Literal        goto state 26
	List           goto state 27
	Tuple          goto state 28

State 32

	ExprUnary -> "not" . ExprUnary                      (rule 52)

	"not"          shift, and enter state 32
	"("            shift, and enter state 34
	"["            shift, and enter state 35
	"-"            shift, and enter state 36
	int            shift, and enter state 37
	float          shift, and enter state 38
	char           shift, and enter state 39
	string         shift, and enter state 40
	"True"         shift, and enter state 41
	"False"        shift, and enter state 42
	ident          shift, and enter state 43

	ExprUnary      goto state 52
	ExprApp        goto state 24
	Atom           goto state 25
	Literal        goto state 26
	List           goto state 27
	Tuple          goto state 28

State 33

	Lambda -> "\\" . LamParams "->" Expr                (rule 12)

	"->"           reduce using rule 5
	"("            shift, and enter state 51
	ident          shift, and enter state 7

	Params         goto state 49
	LamParams      goto state 50

State 34

	Atom -> "(" . Expr ")"                              (rule 60)
	Tuple -> "(" . Expr "," Expr TupleTail ")"          (rule 75)

	"let"          shift, and enter state 29
	"if"           shift, and enter state 30
	"case"         shift, and enter state 31
	"not"          shift, and enter state 32
	"\\"           shift, and enter state 33
	"("            shift, and enter state 34
	"["            shift, and enter state 35
	"-"            shift, and enter state 36
	int            shift, and enter state 37
	float          shift, and enter state 38
	char           shift, and enter state 39
	string         shift, and enter state 40
	"True"         shift, and enter state 41
	"False"        shift, and enter state 42
	ident          shift, and enter state 43

	Expr           goto state 48
	Lambda         goto state 13
	IfExpr         goto state 14
	CaseExpr       goto state 15
	LetExpr        goto state 16
	ExprOr         goto state 17
	ExprAnd        goto state 18
	ExprEq         goto state 19
	ExprRel        goto state 20
	ExprAdd        goto state 21
	ExprMul        goto state 22
	ExprUnary      goto state 23
	ExprApp        goto state 24
	Atom           goto state 25
	Literal        goto state 26
	List           goto state 27
	Tuple          goto state 28

State 35

	List -> "[" . ExprListOpt "]"                       (rule 69)
